# ChangeLog for x11-libs/qt-qt3support
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-qt3support/ChangeLog,v 1.58 2009/12/01 18:14:32 tampakrap Exp $

  01 Dec 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -qt-qt3support-4.6.0_rc1.ebuild:
  Remove Qt 4.6.0 RC

*qt-qt3support-4.6.0 (01 Dec 2009)

  01 Dec 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +qt-qt3support-4.6.0.ebuild:
  Version Bump to 4.6.0

*qt-qt3support-4.6.0_rc1 (18 Nov 2009)

  18 Nov 2009; Alex Alexander <wired@gentoo.org>
  -qt-qt3support-4.6.0_beta1.ebuild, +qt-qt3support-4.6.0_rc1.ebuild:
  added 4.6.0_rc1, removed 4.6.0_beta1

  11 Nov 2009; Ben de Groot <yngwin@gentoo.org> -qt-qt3support-4.4.2.ebuild,
  -qt-qt3support-4.5.1.ebuild, -qt-qt3support-4.5.2.ebuild:
  Remove obsolete versions

  10 Nov 2009; Jeroen Roovers <jer@gentoo.org> qt-qt3support-4.5.3.ebuild:
  Stable for HPPA (bug #290922).

  09 Nov 2009; Joseph Jezak <josejx@gentoo.org> qt-qt3support-4.5.3.ebuild:
  Marked ppc/ppc64 stable for bug #290922.

  09 Nov 2009; Raúl Porcel <armin76@gentoo.org> qt-qt3support-4.5.3.ebuild:
  alpha/ia64/sparc stable wrt #290922

  09 Nov 2009; Markus Meier <maekke@gentoo.org> qt-qt3support-4.5.3.ebuild:
  arm stable, bug #290922

  31 Oct 2009; Markus Meier <maekke@gentoo.org> qt-qt3support-4.5.3.ebuild:
  amd64 stable, bug #290922

  29 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  qt-qt3support-4.5.3.ebuild:
  stable x86, bug 290922

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  qt-qt3support-4.6.0_beta1.ebuild:
  added keywords: ~alpha ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86-fbsd

*qt-qt3support-4.6.0_beta1 (16 Oct 2009)

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  +qt-qt3support-4.6.0_beta1.ebuild:
  added version 4.6.0_beta1

  11 Oct 2009; Raúl Porcel <armin76@gentoo.org> qt-qt3support-4.5.2.ebuild:
  alpha/ia64/sparc stable wrt #286653
