@@ -2,6 +2,6 @@ DIST qt-everywhere-opensource-src-4.6.0.tar.gz 155679111 RMD160 7842b9f4a5364016
 DIST qt-mac-opensource-src-4.5.3.tar.gz 123311631 RMD160 290fecbe8698ead4f884617ae4dd20b37663545e SHA1 566a9c45b261447c07c784b9317c9b5aae1ccbd8 SHA256 1bca03b2355e686ae7184d98c4da1d60689732754407886cefff4288b28c6f34
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
 EBUILD qt-qt3support-4.5.3.ebuild 1232 RMD160 f51dc7a36a63a129a2ca63a66d327b73c081b98e SHA1 aeb7cd249bd86105d3f6b6e6fc5ba317f8eea324 SHA256 bb7a8ff1dfe1914c900d524b0c175479b79eab5ef48580c8fdc3f1f7df7c118e
-EBUILD qt-qt3support-4.6.0.ebuild 1267 RMD160 54c5ed21c1e948a5c26922520693d218db8b8abe SHA1 ef29bf517019eff36cd2dddb728f39e53b91aefd SHA256 8f505107bbf8e725e990d1b2d53beb12e66e2a6bc82ae44302e5b151dd73d4f4
-MISC ChangeLog 7677 RMD160 c41865207764952176fb630b8ee14161dc499774 SHA1 c2e60e5cb90eac5c5bdf917bf1db2c55b73e4f96 SHA256 e94b359bff83250104b1e407f90e2f23e66de0cabbe7662d375a704d9c7b122e
+EBUILD qt-qt3support-4.6.0.ebuild 1234 RMD160 346bf35c27822a0aa5e86d2f944dea403c1283f5 SHA1 1a94f635cac3d6b98c438c83f261701078e06135 SHA256 87045227ecaaa477c243bbddf2630e0e12cde1e025bd56e3251390c370d77c60
+MISC ChangeLog 7775 RMD160 64a80a53e01d533b6cf00c4332b5e002e864ea72 SHA1 922ff8ddd3d64fc566dc791dfc2ff86bb04ae4b7 SHA256 7240f092621c1823a1620c07ebc72859aa04098ea988594162cf44f00ea41eff
 MISC metadata.xml 374 RMD160 6f6fb0b82143c5c20553a1244f31edd8f3b4c224 SHA1 0a7f6d0d3d3b9d09bb3e45e36caf35d5032886eb SHA256 ce869f7140b7cd1af5411549602b56d36fe5de14960adad7026aae30b5399dfd
